--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "start": "node ./dist/index.js",
     "dev": "nodemon ./index.ts",
     "build": "tsc",
+    "tag1": "cucumber-js --tags @register",
     "lint": "eslint --ignore-path .gitignore ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cucumber/cucumber": "^8.5.0",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
