--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./dist/index.js",
-    "dev": "nodemon ./index.ts",
+    "dev": "nodemon index.ts",
     "build": "tsc",
     "lint": "eslint --ignore-path .gitignore ."
   },
@@ -28,6 +28,7 @@
     "@prisma/client": "^3.14.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "nodemon": "^1.3.3"
   }
