--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "@casl/ability": "^5.4.3",
     "@casl/prisma": "^1.0.1",
     "@prisma/client": "^3.14.0",
+    "@quixo3/prisma-session-store": "^3.1.8",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "nodemon": "^1.3.3"
   }
 }
