--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@quixo3/prisma-session-store": "^3.1.8",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
