--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "devDependencies": {
     "@cucumber/cucumber": "^8.5.0",
+    "@types/express-session": "^1.17.5",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
     "@typescript-eslint/parser": "^5.30.5",
@@ -35,6 +36,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "nodemon": "^1.3.3"
+    "nodemon": "^1.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
