--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^7.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
