--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.34",
     "bcryptjs": "^2.4.3",
+    "connect-pg-simple": "^7.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "nodemon": "^1.3.3"
+    "joi": "^17.6.0",
+    "nodemon": "^1.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
