--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "joi": "^17.6.0",
+    "nodemailer": "^6.7.7",
     "nodemon": "^1.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
