--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "hamjest": "^3.7.3",
     "joi": "^17.6.0",
     "nodemailer": "^6.7.7",
     "nodemon": "^1.3.3",
