--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "start": "node ./dist/index.js",
     "dev": "nodemon index.ts",
     "build": "tsc",
-    "tag1": "cucumber-js --tags @register",
-    "lint": "eslint --ignore-path .gitignore ."
+    "cuber": "cucumber-js",
+    "lint": "eslint --ignore-path .gitignore .",
+    "seed": "ts-node prisma/seed.ts",
+    "dbclean": "prisma migrate reset --force",
+    "test": "npm run lint && npm run dbclean && npm run seed && npm run cuber"
+
   },
   "author": "",
   "license": "ISC",
